# dsl-bootstrap

./: .gitignore  CHANGELOG.md  README.md  Setup.hs  TODO.md  cabal.project.wasm  effect前台语法规范更新todo.md  hie.yaml  mytest.cabal  stack.yaml
app/: Main.hs  (+4 more)
demo-domain-app/: Setup.hs  demo-domain-app.cabal
demo-domain-app/app/: CurrentAst.hs  DomainReport.hs  FrontendBoundarySmoke.hs  Main.hs
demo-domain-app/app/Runtime/: Smoke.hs
demo-domain-app/src/: Plugins.hs
demo-domain-app/src/Domain/: Runtime.hs
demo-domain-app/src/Effects/: Report.hs  User.hs
demo-domain-app/src/Plugins/: Lifecycle.hs
domain-app/: README.md  Setup.hs  domain-app.cabal
domain-app/app/: BusinessSyntaxWitness.hs  CoreBoundarySmoke.hs  CurrentAst.hs  CurrentEffects.hs  DomainReport.hs  FrontendBoundarySmoke.hs  InterpretConfig.hs  RegistryCodegenWitness.hs  RuntimeDiagnosisSmoke.hs  RuntimeDiagnosisWitness.hs  RuntimeSmoke.hs  SelfSmoke.hs
domain-app/src/: Blueprint.hs  SelfDomainApp.hs
domain-app/src/Domain/: AppBlueprint.hs  Business.hs  EffectVocabulary.hs  RegistryCodegenSpec.hs  Runtime.hs  SemanticEvidence.hs  Vocabulary.hs
domain-app/src/Effects/: Demo.hs  Logging.hs  Report.hs  System.hs  Theory.hs  User.hs
domain-app/src/Interpreter/Runtime/: Smoke.hs
domain-app/src/Plugins/: Boot.hs  Configuration.hs  Handle.hs  Lifecycle.hs  Logging.hs  Report.hs  Shutdown.hs
framework-core/: framework-core.cabal
framework-core/src/: Interpreter.hs
framework-core/src/AST/: AppBlueprint.hs  Facts.hs  Interceptors.hs  Names.hs  Vocabulary.hs
framework-core/src/Core/: App.hs  Architecture.hs  Bootstrap.hs  ImportGraph.hs  Validation.hs
framework-core/src/Core/App/: Ana.hs  Boundary.hs  ClaimScope.hs
framework-core/src/Core/Architecture/: Cata.hs
framework-core/src/Core/Boundary/: Frontend.hs
framework-core/src/Core/Effect/: Constraint.hs  Semantics.hs
framework-core/src/Core/Effect/Constraint/: SMT.hs
framework-core/src/Core/Language/: Constraint.hs  Elaboration.hs  Spec.hs
framework-core/src/Core/Workflow/: Eff.hs
framework-core/src/Core/Workflow/Semantics/: Render.hs
framework-core/src/Effects/: EffectTheory.hs  Names.hs
framework-core/src/Framework/: Background.hs  Workflow.hs
framework-core/src/Interpreter/: EffectAlgebra.hs  Runtime.hs  Types.hs
framework-core/src/Interpreter/Runtime/: Contextware.hs  Diagnosis.hs  FactResolution.hs  Facts.hs  Handlers.hs  Middleware.hs  Monad.hs  Trace.hs  Types.hs  WorkflowRunReport.hs
framework-core/src/Interpreter/Runtime/Hanging/: FreeMonoid.hs
framework-core/src/Interpreter/Runtime/Workflow/: FreeAlternative.hs  FreeApplicative.hs  FreeMonad.hs  Wait.hs
framework-core/src/Interpreter/View/Hanging/: FreeMonoid.hs
framework-core/src/Interpreter/View/Workflow/: Choice.hs  FreeMonad.hs  Wait.hs
new-framework-core/: Setup.hs  new-framework-core.cabal
new-framework-core/app/: ArchitectureConcernWitness.hs  AstLayout.hs  AstTree.hs  BootstrapReport.hs  BootstrapRuntimeSmoke.hs  BootstrapSmoke.hs  ConstraintProofSmoke.hs  ConstraintProofWitness.hs  CoreSelfInterpret.hs  DomainMap.hs  FixedPointSmoke.hs  FrameworkCoreFrontendWitness.hs  Main.hs  RegistryReport.hs  RuntimeEvidenceWitness.hs  RuntimeHotPathWitness.hs  RuntimePolicyWitness.hs  SchemaCatalogWitness.hs  SelfArtifactWitness.hs  TrustBaseManifestWitness.hs  WorkflowSemanticsWitness.hs
new-framework-core/app/Domain/: Relations.hs
new-framework-core/src/: Blueprint.hs
new-framework-core/src/Bootstrap/: Blueprint.hs  Business.hs  CoreSurface.hs  Effect.hs  Effects.hs  RegistryCodegen.hs  Report.hs  Runtime.hs  Vocabulary.hs  Workflow.hs
new-framework-core/src/Bootstrap/Effects/CoreArtifact/Facts/: SelfArtifactManifestEvidencePassed.hs
new-framework-core/src/Bootstrap/Effects/CoreArtifact/Registration/: Effect.hs
new-framework-core/src/Bootstrap/Effects/CoreBoundary/Facts/: CoreBoundaryValidated.hs  FrontendBoundaryValidated.hs  ImportGraphBuilt.hs
new-framework-core/src/Bootstrap/Effects/CoreBoundary/Registration/: Effect.hs
new-framework-core/src/Bootstrap/Effects/CoreExpression/Facts/: FrameworkCoreExpression.hs
new-framework-core/src/Bootstrap/Effects/CoreExpression/Registration/: Effect.hs
new-framework-core/src/Bootstrap/Effects/CoreLanguage/Facts/: ElaborationContractValidated.hs  LanguageSpecValidated.hs
new-framework-core/src/Bootstrap/Effects/CoreLanguage/Registration/: Effect.hs
new-framework-core/src/Bootstrap/Effects/CoreModule/Facts/: CoreHostModulesClassified.hs  FrameworkCoreModulesClassified.hs  PackageModulesDiscovered.hs
new-framework-core/src/Bootstrap/Effects/CoreModule/Registration/: Effect.hs
new-framework-core/src/Bootstrap/Effects/CoreProof/Facts/: ConstraintIRBuilt.hs  MinimalCoreReportBuilt.hs  SmtProofPassed.hs
new-framework-core/src/Bootstrap/Effects/CoreProof/Registration/: Effect.hs
new-framework-core/src/Bootstrap/Runtime/: BootstrapHandlers.hs  Boundary.hs  Build.hs  Contract.hs  Interpreter.hs  SourceGraph.hs  Types.hs
new-framework-core/src/Domain/: AppBlueprint.hs  Ast.hs  EffectHandlers.hs  Effects.hs  Interpreter.hs  Registry.hs  Vocabulary.hs
new-framework-core/src/Framework/: App.hs  Ast.hs  Background.hs  Business.hs  Domain.hs  Effect.hs  FixedPoint.hs  Handler.hs  RegistryCodegen.hs  Runtime.hs  SelfArtifact.hs  TrustBase.hs  Workflow.hs
new-framework-core/src/Framework/Architecture/: Concern.hs
new-framework-core/src/Framework/Ast/: Layout.hs
new-framework-core/src/Framework/Background/: ConstraintProof.hs  RuntimeDiagnosis.hs
new-framework-core/src/Framework/Business/: Diagnostics.hs  Evidence.hs
new-framework-core/src/Framework/Frontend/: Evidence.hs
new-framework-core/src/Framework/Runtime/: Concurrency.hs  Diagnosis.hs  Evidence.hs  Handlers.hs  HotPath.hs  Interpreter.hs  Policy.hs  State.hs  Types.hs  Values.hs
new-framework-core/src/Framework/TrustBase/: Manifest.hs  SelfInterpret.hs
new-framework-core/src/Framework/Workflow/: Semantics.hs
new-framework-core/src/FrameworkCore/: BaseApp.hs  CurrentApp.hs  CurrentAst.hs  CurrentEffects.hs  CurrentInterpreter.hs
(+134 files in other folders)
