cabal-version:       2.2

name:                mytest
version:             0.1.0.0
synopsis:            Haskell code-as-documentation AST architecture demo
description:         A demo project for describing application architecture as a foreground AST DSL.
license:             BSD-3-Clause
license-file:        LICENSE
author:              onetime
maintainer:          1018248628@qq.com
copyright:           2026 onetime
category:            Language
build-type:          Custom
extra-source-files:  README.md
                     TODO.md
                     CHANGELOG.md

custom-setup
  setup-depends:      base >= 4.7 && < 5
                    , Cabal >= 2.2
                    , directory
                    , filepath

library
  hs-source-dirs:      src
                     , src/Core
  exposed-modules:     AST.Facts
                     , AST.Interceptors
                     , AST.AppBlueprint
                     , AST.Names
                     , AST.Vocabulary
                     , Blueprint
                     , Core.Architecture
                     , Core.Architecture.Cata
                     , Core.Architecture.Internal
                     , Interpreter
                     , Interpreter.Contextware
                     , Interpreter.EffectAlgebra
                     , Interpreter.FAlgebra
                     , Interpreter.RecursionModel
                     , Interpreter.Runtime
                     , Interpreter.Runtime.Algebra
                     , Interpreter.Runtime.Facts
                     , Interpreter.Runtime.Hanging.FreeMonoid
                     , Interpreter.Runtime.Smoke
                     , Interpreter.Runtime.Trace
                     , Interpreter.Runtime.Types
                     , Interpreter.Runtime.WorkflowRunReport
                     , Interpreter.Runtime.Workflow.Choice
                     , Interpreter.Runtime.Workflow.FreeAlternative
                     , Interpreter.Runtime.Workflow.FreeApplicative
                     , Interpreter.Runtime.Workflow.FreeMonad
                     , Interpreter.Runtime.Workflow.Wait
                     , Interpreter.Types
                     , Interpreter.View.Algebra
                     , Interpreter.View.Hanging.FreeMonoid
                     , Interpreter.View.Program
                     , Interpreter.View.Workflow.Choice
                     , Interpreter.View.Workflow.FreeAlternative
                     , Interpreter.View.Workflow.FreeApplicative
                     , Interpreter.View.Workflow.FreeMonad
                     , Interpreter.View.Workflow.Wait
                     , Interpreter.WorkflowAlgebra
                     , Plugins
                     , Plugins.Boot
                     , Plugins.Configuration
                     , Plugins.Handle
                     , Plugins.Lifecycle
                     , Plugins.Logging
                     , Plugins.Report
                     , Plugins.Shutdown
  other-modules:       Core.Validation
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable mytest
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       CurrentAst
                     , InterpretConfig
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , mytest
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
