cabal-version:       2.2

name:                domain-app
version:             0.1.0.0
synopsis:            Self-hosted framework-core domain app
description:         Minimal domain app whose content is the new framework core itself.
license:             BSD-3-Clause
license-file:        ../LICENSE
author:              onetime
maintainer:          1018248628@qq.com
copyright:           2026 onetime
category:            Application
build-type:          Custom

custom-setup
  setup-depends:      base >= 4.7 && < 5
                    , Cabal >= 2.2

library
  hs-source-dirs:      src
  exposed-modules:     SelfDomainApp
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , new-framework-core
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable domain-app-self-smoke
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , domain-app
                     , new-framework-core
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
