cabal-version:       2.2

name:                domain-app
version:             0.1.0.0
synopsis:            Domain application built on new-framework-core facades
description:         Current domain app, concrete blueprint, plugins, effects, handlers, semantic evidence, and witness executables.
license:             BSD-3-Clause
license-file:        ../LICENSE
author:              onetime
maintainer:          1018248628@qq.com
copyright:           2026 onetime
category:            Application
build-type:          Simple

library
  hs-source-dirs:      src
  exposed-modules:     Blueprint
                     , Domain.EffectVocabulary
                     , Domain.AppBlueprint
                     , Domain.RegistryCodegenSpec
                     , Domain.Runtime
                     , Domain.SemanticEvidence
                     , Domain.Vocabulary
                     , Effects.Logging
                     , Effects.Report
                     , Effects.System
                     , Effects.Theory
                     , Effects.User
                     , Plugins
                     , Plugins.Boot
                     , Plugins.Configuration
                     , Plugins.Handle
                     , Plugins.Lifecycle
                     , Plugins.Logging
                     , Plugins.Report
                     , Plugins.Shutdown
                     , SelfDomainApp
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , new-framework-core
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable mytest
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       CurrentAst
                     , CurrentEffects
                     , InterpretConfig
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , domain-app
                     , new-framework-core
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable domain-app-report
  hs-source-dirs:      app
  main-is:             DomainReport.hs
  other-modules:       CurrentAst
                     , CurrentEffects
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , domain-app
                     , new-framework-core
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable domain-app-self-smoke
  hs-source-dirs:      app
  main-is:             SelfSmoke.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , domain-app
                     , new-framework-core
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable runtime-diagnosis-witness
  hs-source-dirs:      app
  main-is:             RuntimeDiagnosisWitness.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , domain-app
                     , new-framework-core
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable registry-codegen-witness
  hs-source-dirs:      app
  main-is:             RegistryCodegenWitness.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , domain-app
                     , new-framework-core
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
