cabal-version:       2.2

name:                framework-core
version:             0.1.0.0
synopsis:            Core framework for code-as-documentation workflow architecture
description:         Framework core for workflow AST, effect theory, validation, runtime, and proof boundaries.
license:             BSD-3-Clause
license-file:        ../LICENSE
author:              onetime
maintainer:          1018248628@qq.com
copyright:           2026 onetime
category:            Language
build-type:          Simple

library
  hs-source-dirs:      src
  exposed-modules:     Framework.Background
                     , Framework.Effect
                     , Framework.Hylo
                     , Framework.Workflow
  other-modules:       AST.AppBlueprint
                     , AST.Facts
                     , AST.Interceptors
                     , AST.Names
                     , AST.Vocabulary
                     , Core.App
                     , Core.App.Ana
                     , Core.App.Boundary
                     , Core.App.ClaimScope
                     , Core.Architecture
                     , Core.Architecture.Cata
                     , Core.Architecture.Cata.Types
                     , Core.Architecture.Internal
                     , Core.Architecture.Recursion
                     , Core.Bootstrap
                     , Core.Boundary.Frontend
                     , Core.Effect.Constraint
                     , Core.Effect.Constraint.SMT
                     , Core.Effect.Semantics
                     , Core.ImportGraph
                     , Core.Language
                     , Core.Language.Constraint
                     , Core.Language.Elaboration
                     , Core.Language.Spec
                     , Core.Language.Validation
                     , Core.Validation
                     , Core.Workflow.Eff
                     , Core.Workflow.Semantics
                     , Core.Workflow.Semantics.Render
                     , Effects.EffectTheory
                     , Effects.Names
                     , Interpreter
                     , Interpreter.Contextware
                     , Interpreter.EffectAlgebra
                     , Interpreter.FAlgebra
                     , Interpreter.RecursionModel
                     , Interpreter.Runtime
                     , Interpreter.Runtime.Algebra
                     , Interpreter.Runtime.Contextware
                     , Interpreter.Runtime.Diagnosis
                     , Interpreter.Runtime.FactResolution
                     , Interpreter.Runtime.Facts
                     , Interpreter.Runtime.Handlers
                     , Interpreter.Runtime.Hanging.FreeMonoid
                     , Interpreter.Runtime.Middleware
                     , Interpreter.Runtime.Monad
                     , Interpreter.Runtime.RecursionModel
                     , Interpreter.Runtime.Trace
                     , Interpreter.Runtime.Types
                     , Interpreter.Runtime.Workflow.Choice
                     , Interpreter.Runtime.Workflow.FreeAlternative
                     , Interpreter.Runtime.Workflow.FreeApplicative
                     , Interpreter.Runtime.Workflow.FreeMonad
                     , Interpreter.Runtime.Workflow.Node
                     , Interpreter.Runtime.Workflow.Wait
                     , Interpreter.Runtime.WorkflowRunReport
                     , Interpreter.Types
                     , Interpreter.View.Algebra
                     , Interpreter.View.Hanging.FreeMonoid
                     , Interpreter.View.Program
                     , Interpreter.View.Workflow.Choice
                     , Interpreter.View.Workflow.FreeAlternative
                     , Interpreter.View.Workflow.FreeApplicative
                     , Interpreter.View.Workflow.FreeMonad
                     , Interpreter.View.Workflow.Wait
                     , Interpreter.WorkflowAlgebra
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , filepath
                     , process
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
